[package]
name = "dvdcss"
version = "0.1.2"
authors = ["Lonsdaleiter <lonsdaleiteproductions@gmail.com>"]
edition = "2018"
description = "Safe, Rust bindings to libdvdcss."
keywords = ["dvd", "dvdcss", "encrypted-dvd"]
categories = ["api-bindings"]
license = "MIT"
repository = "https://github.com/Lonsdaleiter/dvdcss"
